// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

option go_package = "service/app/interaction/api/pbentity";

import "google/protobuf/timestamp.proto";

message CommentInfo {
    int32                     Id        = 1; //
    int32                     ParentId  = 2; // 父级评论id
    int32                     UserId    = 3; //
    int32                     ObjectId  = 4; //
    int32                     Type      = 5; // 评论类型：1商品 2文章
    string                    Content   = 6; // 评论内容
    google.protobuf.Timestamp CreatedAt = 7; //
    google.protobuf.Timestamp UpdatedAt = 8; //
    google.protobuf.Timestamp DeletedAt = 9; //
}